discussion/kv_engine/179372/179372_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53531: wip

Change-Id: I80ce6bd8780034c9802c723460264d3a6bedc4e0

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-08-30 14:48:43.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-30 14:57:44.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19818/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:4024:29: error: use of undeclared identifier "getCheckpointDestroyerTasks"; did you mean "CheckpointDestroyerTask"? [clang-diagnostic-error]
    for (const auto& task : getCheckpointDestroyerTasks()) {
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kv_bucket.h:31:7: note: "CheckpointDestroyerTask" declared here
class CheckpointDestroyerTask;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:4060:25: error: use of undeclared identifier "getCheckpointDestroyerTasks"; did you mean "CheckpointDestroyerTask"? [clang-diagnostic-error]
    const auto& tasks = getCheckpointDestroyerTasks();
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kv_bucket.h:31:7: note: "CheckpointDestroyerTask" declared here
class CheckpointDestroyerTask;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19818/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:4024:29:
error: use of undeclared identifier "getCheckpointDestroyerTasks"; did you mean "CheckpointDestroyerTask"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19818/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48752/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\checkpoint_test.cc(4024): error C3861: "getCheckpointDestroyerTasks": identifier not found ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48752/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9513/ : FAILURE

Compile error at [2022-08-30T14:50:49.477Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:4024:29:
error: use of undeclared identifier "getCheckpointDestroyerTasks"; did you mean "CheckpointDestroyerTask"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9513/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21058/ : FAILURE

Compile error at [2022-08-30T14:54:27.086Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:4024:29:
error: use of undeclared identifier "getCheckpointDestroyerTasks"; did you mean "CheckpointDestroyerTask"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21058/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22122/ : FAILURE

Compile error at [2022-08-30T14:51:26.482Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:4024:29:
error: ?getCheckpointDestroyerTasks? was not declared in this scope; did you mean ?CheckpointDestroyerTask??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22122/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22857/ : FAILURE

Compile error at [2022-08-30T14:50:47.136Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:4024:29:
error: use of undeclared identifier "getCheckpointDestroyerTasks"; did you mean "CheckpointDestroyerTask"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22857/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21770/ : FAILURE

Compile error at [2022-08-30T14:50:59.509Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:4024:29:
error: ?getCheckpointDestroyerTasks? was not declared in this scope; did you mean ?CheckpointDestroyerTask??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21770/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9612/ : FAILURE

Compile error at [2022-08-30T14:54:52.254Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:4024:29:
error: ?getCheckpointDestroyerTasks? was not declared in this scope; did you mean ?CheckpointDestroyerTask??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9612/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30150/ : FAILURE

Compile error at [2022-08-30T14:51:01.303Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:4024:29:
error: use of undeclared identifier "getCheckpointDestroyerTasks"; did you mean "CheckpointDestroyerTask"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30150/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19039/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40979/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
